Skip to content

Assertion failed!

after trying to play first video with this version:

Microsoft Visual C++ Runtime Library

Assertion failed!

Program: F:\software\portable\vlc-1.1.1\vlc.exe File: misc/variables.c Line: 965

Expression: 0

For information on how your program can cause an assertion failure, see the Visual C++ documentation on asserts

(Press Retry to debug the application - JIT must be enabled)

Abort Retry Ignore

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information