MSW: fix assertion failure on Open() error paths (fix #3889)

Do not try to delete a callback and/or a mutex that do not exist.
The goto error paths still look a bit suspicious, someone should
double check them.